--- a/progetto-esame/Properties/Resources.resx
+++ b/progetto-esame/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="stickman-sitting-down" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\stickman-sitting-down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="stickman_walk" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\stickman-walk.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
